--- a/content/resources/2-161f08.md
+++ b/content/resources/2-161f08.md
@@ -3,7 +3,7 @@ content_type: resource
 description: Data from instruments can be analyzed using filters to enhance different
   features; here, a deconvolution filter extracts a more detailed image from a blurry
   photo taken by the Hubble telescope. (Image by Prof. Derek Rowell.)
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-161-signal-processing-continuous-and-discrete-fall-2008/8685512b6a846b30fc734d61ba0b02af_2-161f08.jpg
+file: /media/courses/2-161-signal-processing-continuous-and-discrete-fall-2008/8685512b6a846b30fc734d61ba0b02af_2-161f08.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Data from instruments can be analyzed using filters to enhance different
@@ -12,6 +12,8 @@ image_metadata:
   credit: ''
   image-alt: A blurry image of stars and its non-blurry counterpart, along with a
     block diagram of the system.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: A blurry image of stars and its non-blurry counterpart, along with a block
   diagram of the system
