--- a/content/resources/2-161f08.md
+++ b/content/resources/2-161f08.md
@@ -13,6 +13,7 @@ image_metadata:
   image-alt: A blurry image of stars and its non-blurry counterpart, along with a
     block diagram of the system.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: A blurry image of stars and its non-blurry counterpart, along with a block
@@ -24,4 +25,3 @@ video_metadata:
   youtube_id: null
 ---
 Data from instruments can be analyzed using filters to enhance different features; here, a deconvolution filter extracts a more detailed image from a blurry photo taken by the Hubble telescope. (Image by Prof. Derek Rowell.)
-
