--- a/content/resources/2-161f08.md
+++ b/content/resources/2-161f08.md
@@ -4,6 +4,7 @@ description: Data from instruments can be analyzed using filters to enhance diff
   features; here, a deconvolution filter extracts a more detailed image from a blurry
   photo taken by the Hubble telescope. (Image by Prof. Derek Rowell.)
 file: /courses/2-161-signal-processing-continuous-and-discrete-fall-2008/8685512b6a846b30fc734d61ba0b02af_2-161f08.jpg
+file_size: 83675
 file_type: image/jpeg
 image_metadata:
   caption: Data from instruments can be analyzed using filters to enhance different
